--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -25,10 +25,11 @@ jobs:
       - uses: actions/checkout@v3 
       
       - name: Setup Go environment
-      - uses: actions/setup-go@v3.2.0
+        uses: actions/setup-go@v3.2.0
  
       - name: Install packwiz
         run: go install github.com/packwiz/packwiz@latest
         
       - name: Build curseforge
         run: packwiz curseforge export
+
