--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -26,6 +26,8 @@ jobs:
       
       - name: Setup Go environment
         uses: actions/setup-go@v3.2.0
+        with: 
+           go-version: 18.0
  
       - name: Install packwiz
         run: go install github.com/packwiz/packwiz@latest
