--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v3.2.0
         with: 
-           go-version: 18.0
+          go-version: '>=1.18.0'
+      - run: go version
  
       - name: Install packwiz
         run: go install github.com/packwiz/packwiz@latest
