--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -33,6 +33,10 @@ jobs:
       - name: Install packwiz
         run: go install github.com/packwiz/packwiz@latest
         
+      - name: Get File Name
+        run: |
+          echo "${fromJson("pack.toml").name}-{fromJson("pack.toml").version}.zip}"
+          
       - name: Build curseforge
         run: packwiz curseforge export
       
