--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -44,6 +44,7 @@ jobs:
           field: 'version'
           
       - name: packName 
+        id: packName
         uses: SebRollen/toml-action@v1.0.0
         with: 
           file: 'pack.toml'
@@ -55,7 +56,22 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: "${{ steps.packName.outputs.value }}-${{ steps.version.outputs.value }}.zip"
+          release_name: "${{ steps.packName.outputs.value }}-${{ steps.modpackVersion.outputs.value }}.zip"
           tag_name: curseforge
         env:
           GITHUB_TOKEN: ${{ github.token }}
+      
+      - uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: "${{ steps.packName.outputs.value }}-${{ steps.modpackVersion.outputs.value }}.zip"
+          asset_name: "${{ steps.packName.outputs.value }}-${{ steps.modpackVersion.outputs.value }}.zip"
+          asset_content_type: application/zip
+   
+      - uses: eregon/publish-release@v1
+        env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          release_id: ${{ steps.create_release.outputs.id }}
