--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -52,12 +52,37 @@ jobs:
       
       - name: Rename file 
         run: mv "${{ steps.packName.outputs.value }}-${{ steps.modpackVersion.outputs.value }}.zip" "${{ steps.packName.outputs.value }}CurseForge-${{ steps.modpackVersion.outputs.value }}.zip"
-
-#       - name: Upload artifact
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: "${{ steps.packName.outputs.value }}CurseForge-${{ steps.modpackVersion.outputs.value }}.zip"
-#           path: "${{ steps.packName.outputs.value }}-${{ steps.modpackVersion.outputs.value }}.zip"
+  
+  buildTechnicSolder:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download curseme scripts
+        uses: actions/checkout@v3 
+        with: 
+          repository: curseme
+          
+      - run: ./getToken.sh
+      
+      - name: Download mod jars
+        run: ./parsePack.sh "${{ steps.packName.outputs.value }}-${{ steps.modpackVersion.outputs.value }}.zip" "${{ steps.packName.outputs.value }}CurseForge-${{ steps.modpackVersion.outputs.value }}.zip"
+      
+      - name: Download TechnicSolder packager
+        uses: actions/checkout@v3
+        with:
+          repository: TechnicSolderPackager
+          path: ./packwrk/mods
+      
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.1
+        
+      - name : Build TechnicSolderPackager
+        run: "msbuild ./packwrk/mods/TechnicSolderPackager.csproj /p:Configuration=Release /p:Platform=x86 /p:RuntimeIdentifier=linux-x64"
+        
+      - name: Execute TechnicSolder Packager
+        run: ./packwrk/mods/TechnicSolderPackager
+      
+      
+      
   release: 
     runs-on: ubuntu-latest  
     steps:
