--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -59,8 +59,7 @@ jobs:
       - name: Download curseme scripts
         uses: actions/checkout@v3 
         with: 
-          repository: mjra007/curseme
-          branch: main
+          repository: mjra007/curseme@latest
           
       - run: ./getToken.sh
       
