--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -1,26 +1,16 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Curseforge Modpack build
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "release" ]
   pull_request:
     branches: [ "release" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   buildCurseForge:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v3 
       
@@ -57,9 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download curseme scripts
-        uses: actions/checkout@v3 
-        with: 
-          repository: mjra007/curseme@latest
+        run: git clone git@github.com:mjra007/TechnicSolderPackager.git
           
       - run: ./getToken.sh
       
