--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -49,9 +49,8 @@ jobs:
       - name: Download curseme scripts
         uses: actions/checkout@v3 
         with: 
-          repository: mjra007/curseme
+          repository: mjra007/curseme@master
           branch: main
-          path: ./
           
       - run: ./getToken.sh
       
