--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -51,6 +51,7 @@ jobs:
         with: 
           repository: mjra007/curseme@master
           branch: main
+          token: ${{ github.token }}
           
       - run: ./getToken.sh
       
