--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -7,25 +7,19 @@ on:
     branches: [ "release" ]
 
   workflow_dispatch:
-jobs: 
-  setupEnvironment:
+jobs:    
+  buildCurseForgeModpackFile: 
     runs-on: ubuntu-latest
-    
     steps:
       - uses: actions/checkout@v3  
+      
       - name: Setup Go environment
         uses: actions/setup-go@v3.2.0
         with: 
           go-version: '>=1.18.0'
+          
       - run: go version
- 
-      - name: Install packwiz
-        run: go install github.com/packwiz/packwiz@latest
-        
-  buildCurseForgeModpackFile:
-    needs: setupEnvironment
-    runs-on: ubuntu-latest
-    steps:
+      
       - name: Build curseforge
         run: packwiz curseforge export 
                
@@ -46,10 +40,14 @@ jobs:
       - name: Rename file 
         run: mv "${{ steps.packName.outputs.value }}-${{ steps.modpackVersion.outputs.value }}.zip" "${{ steps.packName.outputs.value }}CurseForge-${{ steps.modpackVersion.outputs.value }}.zip"
 
-  buildTechnicSolderModpackFiles:
-    needs: setupEnvironment
+  buildTechnicSolderModpackFiles: 
     runs-on: ubuntu-latest
     steps: 
+      - uses: actions/checkout@v3  
+      
+      - name: Install packwiz
+        run: go install github.com/packwiz/packwiz@latest
+      
       - name: Download TechnicSolder packager
         run: | 
           wget https://github.com/mjra007/TechnicSolderPackager/releases/download/ver-5319cc593d8d227e9aff18d4b2676389d32090ea/technicsolderpackager.zip -P ./
@@ -62,7 +60,7 @@ jobs:
         run: dotnet TechnicSolderPackager.dll packager ${{ steps.modpackVersion.outputs.value }} ${{ steps.packName.outputs.value }}TechnicSolder
   
   createRelase:
-    needs: [setupEnvironment, buildTechnicSolderModpackFiles, buildCurseForgeModpackFile]
+    needs: [buildTechnicSolderModpackFiles, buildCurseForgeModpackFile]
     runs-on: ubuntu-latest
     steps:
       - name: Create Release
