--- a/.github/workflows/Curseforge.yml
+++ b/.github/workflows/Curseforge.yml
@@ -93,7 +93,7 @@ jobs:
           release_id: ${{ steps.create_release.outputs.id }}
      
       - name: Upload to CurseForge 
-        uses: mjra007/EnchantedOasisModpack@latest
+        uses: itsmeow/curseforge-upload@v3
         with:
           token: ${{secrets.CURSEFORGEMODPACKKEY}}
           project_id: 287738
