--- a/.github/workflows/ModpackFiles.yml
+++ b/.github/workflows/ModpackFiles.yml
@@ -102,12 +102,12 @@ jobs:
         with:
           release_id: ${{ steps.create_release.outputs.id }}
      
-      - name: Upload to CurseForge 
-        uses: itsmeow/curseforge-upload@v3
-        with:
-          token: ${{secrets.CURSEFORGEMODPACKKEY}}
-          project_id: 287738
-          game_endpoint: minecraft 
-          file_path: ${{ steps.packName.outputs.value }}CurseForge-${{ steps.modpackVersion.outputs.value }}.zip  
-          game_versions: 6756 
-          release_type: release
+#       - name: Upload to CurseForge 
+#         uses: itsmeow/curseforge-upload@v3
+#         with:
+#           token: ${{secrets.CURSEFORGEMODPACKKEY}}
+#           project_id: 287738
+#           game_endpoint: minecraft 
+#           file_path: ${{ steps.packName.outputs.value }}CurseForge-${{ steps.modpackVersion.outputs.value }}.zip  
+#           game_versions: 6756 
+#           release_type: release
