--- a/.github/workflows/ModpackFiles.yml
+++ b/.github/workflows/ModpackFiles.yml
@@ -60,7 +60,7 @@ jobs:
       - name: setup-chromedriver 
         uses: nanasess/setup-chromedriver@v1.0.7
           
-      - name: ssh
+      - name: Unpack mods for solder
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVERIP }}
@@ -68,8 +68,10 @@ jobs:
           password: ${{ secrets.PASSWORD }} 
           script: |
              dotnet TechnicSolderPackager.dll unpacker "${{ steps.packName.outputs.value }}TechnicSolder-${{ steps.modpackVersion.outputs.value }}.zip"
-             dotnet TechnicSolderPackager.dll uploader ${{secrets.SOLDERUSER}} ${{secrets.SOLDERPASSWORD}}
-             
+
+      - name: Register Solder mods
+        run: dotnet TechnicSolderPackager.dll uploader ${{secrets.SOLDERUSER}} ${{secrets.SOLDERPASSWORD}}
+        
       - name: Create Release
         uses: actions/create-release@v1
         id: create_release
