--- a/.github/workflows/ModpackFiles.yml
+++ b/.github/workflows/ModpackFiles.yml
@@ -97,15 +97,7 @@ jobs:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           release_id: ${{ steps.create_release.outputs.id }}
-          
-      - name: Get Current Release
-        id: get_current_release
-        uses: joutvhu/get-release@v1 
-        with:
-         tag_name: "3.2.1"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-               
+            
       - name: Unpack mods for solder
         uses: appleboy/ssh-action@master
         with:
@@ -114,7 +106,7 @@ jobs:
           password: ${{ secrets.PASSWORD }} 
           script: |
              cd ${{secrets.MODSPATH}}
-             wget ${{ steps.get_current_release.outputs.upload_url }}/${{ steps.packName.outputs.value }}TechnicSolder-${{ steps.modpackVersion.outputs.value }}.zip -P ./
+             wget https://github.com/mjra007/TechnicSolderPackager/releases/download/${{ steps.modpackVersion.outputs.value }}/${{ steps.packName.outputs.value }}TechnicSolder-${{ steps.modpackVersion.outputs.value }}.zip -P ./
              dotnet TechnicSolderPackager.dll unpacker "${{ steps.packName.outputs.value }}TechnicSolder-${{ steps.modpackVersion.outputs.value }}.zip"
 
       - name: Register Solder mods
