--- a/.github/workflows/ModpackFiles.yml
+++ b/.github/workflows/ModpackFiles.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Download TechnicSolder packager
         run: | 
-          wget https://github.com/mjra007/TechnicSolderPackager/releases/download/ver-b2f592160a0b3ec7353765b152bc5ba279aa9ad3/technicsolderpackager.zip -P ./
+          wget https://github.com/mjra007/TechnicSolderPackager/releases/download/ver-dee1afe8a8338e46e94bea6ee356384458a8b93b/technicsolderpackager.zip -P ./
           unzip ./technicsolderpackager.zip
           
       - name: Execute Downloader
@@ -113,7 +113,7 @@ jobs:
         run: wget http://${{ secrets.SERVERIP }}/mods/NewMods.csv
  
       - name: Register Solder mods
-        run: dotnet TechnicSolderPackager.dll uploader ${{secrets.SOLDEREMAIL}} ${{secrets.SOLDERPASSWORD}}
+        run: dotnet TechnicSolderPackager.dll uploader ${{secrets.SOLDEREMAIL}} ${{secrets.SOLDERPASSWORD}} ${{ secrets.SERVERIP }}
         
 #       - name: Upload to CurseForge 
 #         uses: itsmeow/curseforge-upload@v3
