--- a/.github/workflows/ModpackFiles.yml
+++ b/.github/workflows/ModpackFiles.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3 
       
-      - name: Setup Go environment
+      - name: Setup Go environmentt
         uses: actions/setup-go@v3.2.0
         with: 
           go-version: '>=1.18.0'
