--- a/.github/workflows/ModpackFiles.yml
+++ b/.github/workflows/ModpackFiles.yml
@@ -94,6 +94,16 @@ jobs:
           asset_name: "${{ steps.packName.outputs.value }}TechnicSolder-${{ steps.modpackVersion.outputs.value }}.zip"
           asset_content_type: application/zip
       
+      - name: Upload Version Delta
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: "ModpackDelta.json"
+          asset_name: "$ModpackDelta-${{ steps.modpackVersion.outputs.value }}.json"
+          asset_content_type: application/json
+          
       - name: Publish release
         uses: eregon/publish-release@v1
         env:
