Add zoo wild animals rebuild.
Removed unused configs for vanilla fix and mahoutsukai

--- a/config/MoCreatures/MoCreatures.cfg
+++ b/config/MoCreatures/MoCreatures.cfg
@@ -83,7 +83,7 @@ bee {
 ####################
 
 biggolem {
-    B:canspawn=true
+    B:canspawn=false
     I:frequency=3
     I:maxchunk=1
     I:maxspawn=1
